--- a/.gitignore
+++ b/.gitignore
@@ -146,7 +146,6 @@ dmypy.json
 .mypy_cache
 
 # папки со статикой и медиа
-/static/
-/yatube/posts/static/
-/yatube/media/
+# /yatube/posts/static/
+# /yatube/media/
 
